--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@ var date = new Date();
 	var date = new Date(); // today
 	var times = prayTimes.getTimes(date, [29.5, 47.75],+3);
 	var list = ['Fajr', 'Sunrise', 'Dhuhr', 'Asr', 'Maghrib', 'Isha'];
-	var myname = ['الفجر', 'الشروق', 'الظهر', 'العصر', 'المغرب', 'العشاء'];
+	var myname = ['aالفجر', 'الشروق', 'الظهر', 'العصر', 'المغرب', 'العشاء'];
 
 	var html = '<table id="timetable">';
 	html += '<tr><th colspan="2">'+ date.toLocaleDateString()+ '</th></tr>';
